# cocaml

./: .gitignore  .opam  Makefile  README.md  a.out  dune-project  result.s  result_exec  runner.opam  test.ll  test2.ll
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_coverage/: index.html
_coverage/src/lib/: cocaml_llvm.ml.html  cocaml_math.ml.html  lexer.ml.html  menhir_parser.ml.html  parser_error_handler.ml.html  stack_frame.ml.html  syntax_node.ml.html  translator.ml.html
src/: dune  lexer.ml  lexer.mli  lexer.mll  main.ml  main.mli  menhir_parser.mly  parser.mli  preprocessor.mli  runner.ml  syntax_node.ml  syntax_node.mli  translator.ml  translator.mli
src-test/: dune  tests.ml
src/lib/: cocaml_llvm.ml  cocaml_llvm.mli  cocaml_main.ml  cocaml_main.mli  cocaml_math.ml  cocaml_math.mli  dune  lexer.mll  menhir_parser.mly  parser_error_handler.ml  parser_error_handler.mli  preprocessor.mli  stack_frame.ml  stack_frame.mli  stack_frame2.ml  syntax_node.ml  syntax_node.mli  translator.ml  translator.mli
test/: dune  large.c  large.txt  loop.c  loop.ll  loop.s  loop_ast.txt  loop_undefined_variable.c  loop_undefined_variable_ast.txt  no_colon.c  no_colon.txt  simple.c  simple_ast.txt  simple_ast_sexp.txt  switch.c  switch_ast.txt  temp.c  test.c  test.ll  test.s  test_ex  test_result.ll  tests.ml
