(menhir
  (modules menhir_parser)
)

(ocamllex lexer)

(library
 (name cocaml)                   
 (modules syntax_node lexer menhir_parser)
 (libraries core ppx_jane)        
 (preprocess (pps ppx_jane)))  

(executable
 (name main)                     
 (modules main)                   
 (libraries cocaml core))      

