(menhir
  (modules menhir_parser)
  (infer true)
)

(ocamllex lexer)

(library
 (name cocaml)                   
 (modules syntax_node lexer menhir_parser translator)
 (libraries core ppx_jane llvm)
 (preprocess (pps ppx_jane)))

(executable
 (name main)                     
 (modules main)                
 (libraries cocaml core)
)      

