(menhir
  (modules menhir_parser)
  (infer true)
)

(ocamllex lexer)

(library
 (name cocaml)                   
 (modules syntax_node cocaml_math cocaml_llvm lexer menhir_parser translator stack_frame)
 (libraries core ppx_jane llvm)
 (preprocess (pps ppx_deriving.show ppx_jane)))

(library
  (name cocaml_main)
  (modules cocaml_main)
  (libraries cocaml core)
)

